<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/transformation_msg_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_medium"
        android:layout_weight="1"
        android:freezesText="true"
        tools:text="This is text that is contained in this "/>


    <EditText
        android:id="@+id/transformation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_test_msg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <ProgressBar
            android:id="@+id/transformation_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/transformation_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transformation_transform_btn"/>

    </LinearLayout>

</LinearLayout>